Fix overflow on old versions of iOS.

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ a:link, a:visited {
 
 #page {
 	padding: 0 0 2em 0;
+	overflow: hidden;
 }
 
 #title {
